--- a/TWITTERAPI.html
+++ b/TWITTERAPI.html
@@ -7,6 +7,7 @@
 	  <h1 style="text-align:center;">Twitter API pour Kepasa</h1>
 	  {{> tweets}}
 	  {{> soirees}}
+	  {{> meteo}}
 	</div>
 </body>
 
@@ -31,4 +32,10 @@
 	<h2>Soirées populaires Aujourd'hui</h2>
 	<h4><span style="color:#e74c3c;">Dernière soirée : </span> {{ soiree_1 }}</h4>
 	<h4><span style="color:#e74c3c;">Avant dernière soirée : </span> {{ soiree_2 }}</h4>
+</template>
+
+<template name="meteo">
+	<h2>Meteo Paris</h2>
+	<h4><span style="color:#e74c3c;">Meteo maintenant : </span> {{ meteo_0 }}</h4>
+	<h4><span style="color:#e74c3c;">Meteo +1h : </span> {{ meteo_1 }}</h4>
 </template>
