--- a/TWITTERAPI.html
+++ b/TWITTERAPI.html
@@ -22,6 +22,7 @@
 	<h2>Tweets RATP <span style="color:#16a085;">RERA</span></h2>
 	<h4><span style="color:#e74c3c;">Dernier tweet : </span> {{ tweet_RERA_1 }}</h4>
 	<h4><span style="color:#e74c3c;">Avant dernier tweet : </span> {{ tweet_RERA_2 }}</h4>
+	{{> reactiveTable collection=tableRERA}}
 	<h2>Tweets RATP <span style="color:#16a085;">RERB</span></h2>
 	<h4><span style="color:#e74c3c;">Dernier tweet : </span> {{ tweet_RERB_1 }}</h4>
 	<h4><span style="color:#e74c3c;">Dernier tweet : </span> {{ tweet_RERB_2 }}</h4>
