--- a/TWITTERAPI.html
+++ b/TWITTERAPI.html
@@ -12,6 +12,7 @@
 	  {{> meteoLille}}
 	  {{> eurostar}}
 	  {{> sneetch}}
+	  {{> leMonde}}
 	</div>
 </body>
 
@@ -69,6 +70,11 @@
 	{{> reactiveTable collection=evenementsSneetch}}
 </template>
 
+
+<template name="leMonde">
+	<h2>Tweet 1 du monde</h2>
+	<h4>{{ tweet_LeMonde }}</h4>
+</template>
 
 
 
