--- a/TWITTERAPI.html
+++ b/TWITTERAPI.html
@@ -41,6 +41,9 @@
 	<h2>Tweets RATP <span style="color:#16a085;">Transports IDF</span></h2>
 	<h4><span style="color:#e74c3c;">Dernier tweet : </span> {{ tweet_RATP_1 }}</h4>
 	<h4><span style="color:#e74c3c;">Dernier tweet : </span> {{ tweet_RATP_2 }}</h4>
+	<h2>Tweets RATP <span style="color:#16a085;">Ligne 1</span></h2>
+	<h4><span style="color:#e74c3c;">Dernier tweet : </span> {{ tweet_ligne1_1}}</h4>
+	<h4><span style="color:#e74c3c;">AvantRA_1  dernier tweet : </span> {{ tweet_ligne1_2 }}</h4>
 </template>
 
 <template name="soirees">
