--- a/TWITTERAPI.html
+++ b/TWITTERAPI.html
@@ -14,6 +14,7 @@
 	  {{> eurostar}}
 	  {{> sneetch}}
 	  {{> leMonde}}
+	  {{> residentadvisor}}
 	</div>
 </body>
 
@@ -85,6 +86,12 @@
 <template name="leMonde">
 	<h2>Tweet 1 du monde</h2>
 	<h4>{{ tweet_LeMonde }}</h4>
+</template>
+
+
+<template name = "residentadvisor">
+	<h2>Évènements Paris (RA)</h2>
+	{{>reactiveTable collection=evenementsRA}}
 </template>
 
 
