--- a/TWITTERAPI.html
+++ b/TWITTERAPI.html
@@ -14,6 +14,7 @@
 	  {{> eurostar}}
 	  {{> sneetch}}
 	  {{> leMonde}}
+	  {{> residentadvisor}}
 	</div>
 </body>
 
@@ -87,7 +88,10 @@
 	<h4>{{ tweet_LeMonde }}</h4>
 </template>
 
-
+<template name = "residentadvisor">
+	<h2>Évènements Paris (RA)</h2>
+	{{>reactiveTable collection=evenementsRA}}
+</template>
 
 
 
