--- a/TWITTERAPI.html
+++ b/TWITTERAPI.html
@@ -15,6 +15,8 @@
 	  {{> sneetch}}
 	  {{> leMonde}}
 	  {{> residentadvisor}}
+	  {{>grevesLille}}
+	  {{>grevesParis}}
 	</div>
 </body>
 
@@ -93,6 +95,15 @@
 	{{>reactiveTable collection=evenementsRA}}
 </template>
 
+<template name = "grevesLille">
+	<h2>Grèves (Lille) </h2>
+	{{>reactiveTable collection=grevesLille}}
+</template>
+
+<template name = "grevesParis">
+	<h2>Grèves (Ile de France) (RA)</h2>
+	{{>reactiveTable collection=grevesParis}}
+</template>
 
 
 
