--- a/TWITTERAPI.html
+++ b/TWITTERAPI.html
@@ -93,6 +93,11 @@
 	{{>reactiveTable collection=evenementsRA}}
 </template>
 
+<template name = "grevesParis">
+	<h2> Grèves (Ile de France) </h2>
+	{{>reactiveTable collection=greveParis}}
+</template>
+
 
 
 
