--- a/TWITTERAPI.html
+++ b/TWITTERAPI.html
@@ -15,7 +15,7 @@
 	  {{> sneetch}}
 	  {{> leMonde}}
 	  {{> residentadvisor}}
-	  {{>grevesParis}}
+	  {{> grevesParis}}
 	</div>
 </body>
 
@@ -96,7 +96,7 @@
 
 <template name = "grevesParis">
 	<h2> Grèves (Ile de France) </h2>
-	{{>reactiveTable collection=greveParis}}
+	{{>reactiveTable collection = grevesParis}}
 </template>
 
 
