--- a/TWITTERAPI.html
+++ b/TWITTERAPI.html
@@ -15,7 +15,7 @@
 	  {{> sneetch}}
 	  {{> leMonde}}
 	  {{> residentadvisor}}
-	  {{> grevesParis}}
+	  {{> grevesIledeFrance}}
 	</div>
 </body>
 
@@ -94,7 +94,7 @@
 	{{>reactiveTable collection=evenementsRA}}
 </template>
 
-<template name = "grevesParis">
+<template name = "grevesIledeFrance">
 	<h2> Grèves (Ile de France) </h2>
 	{{>reactiveTable collection = grevesParis}}
 </template>
